# web-scraping-siiau

./: README.md  pyproject.toml
ref/: formulario_consulta.html  resultado_consulta.html
src/: __init__.py  demo.py
src/gui/: README.md  class_list_panel.py  form_panel.py  main_window.py
src/siiau/: __init__.py  exceptions.py  models.py  parsers.py  requester.py
